apps/article-service/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: article-service
  namespace: default
  labels:
    app.kubernetes.io/name: article-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: article-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: article-service
    spec:
      imagePullSecrets:
        - name: ghcr-docker-pull

      containers:
        - name: article-service
          image: "ghcr.io/nerijus-lgtm/article_service:sha-f7495fd"
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: "/app/data"
              name: article-service-data
            - mountPath: "/app/credentials.json"
              subPath: credentials.json
              readOnly: true
              name: article-service-google-account

          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          
          resources:
            requests:
              cpu: 200m
              memory: 200Mi

      volumes:
        - name: article-service-data
          persistentVolumeClaim:
            claimName: article-service-data
        - name: article-service-google-account
          secret:
            secretName: article-service-google-account
