apps/article-service/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: article-service
  namespace: default
  labels:
    app.kubernetes.io/name: article-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: article-service
