apps/article-service/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: article-service
  namespace: default
  labels:
    app.kubernetes.io/name: article-service
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "news.velocita.lt"
      secretName: tls-article-service
  rules:
    - host: "news.velocita.lt"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: article-service
                port:
                  number: 8000
